--- a/cora-test.html
+++ b/cora-test.html
@@ -9,8 +9,7 @@
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 
     <script src="https://unpkg.com/aframe-layout-component@5.3.0/dist/aframe-layout-component.min.js"></script>
-    <script
-        src="https://unpkg.com/aframe-environment-component@1.3.2/dist/aframe-environment-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.3.2/dist/aframe-environment-component.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.2.0/dist/aframe-extras.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.2.0/dist/aframe-extras.min.js"></script>
@@ -200,7 +199,7 @@
     data-aframe-default-light="" aframe-injected="" visible="" position="0.761 30 0" rotation="-90 0 0"></a-entity>
 
 <!-- <a-sphere scale="1 1 -1" material="src: #expoInt; side: double; transparent: true; metalness: 0.25; roughness: 0.75;" radius="10" rotation="0 90 0"></a-sphere> -->
-<a-sky src="#coraSceneL" rotation="0 0 0"></a-sky>
+<a-sky color="#000" rotation="0 0 0"></a-sky>
             </a-scene>
 
 
