added business management page

--- a/cora-test.html
+++ b/cora-test.html
@@ -173,11 +173,8 @@
                             <a-animation begin="fusing" easing="ease-in" attribute="scale" fill="backwards" from="1 1 1"
                                 to="0.2 0.2 0.2" dur="1500"></a-animation>
                         </a-entity>
-
                     </a-entity>
                 </a-entity>
-
-
 
 
                 <!-- LIGHT #1 -->
@@ -187,14 +184,12 @@
 
 
                 <!-- LIGHT #2 -->
-
 <a-entity
     light="color: #424242; type: spot; intensity: 20; castShadow: true; decay: 1.38; groundColor: #ffffff; distance: 2.09; penumbra: 0.32; shadowBias: 0.62"
     data-aframe-default-light="" aframe-injected="" visible="" position="0.761 100 0" rotation="-90 0 0"></a-entity>
 
 
-                <!-- AMBIENT -->
-
+<!-- AMBIENT -->
 <a-entity light="color: #878787; type: ambient; intensity: 0.75; castShadow: true; decay: 0.09"
     data-aframe-default-light="" aframe-injected="" visible="" position="0.761 30 0" rotation="-90 0 0"></a-entity>
 
@@ -206,6 +201,25 @@
 
         </div>
     </div>
+
+
+
+<!-- 
+
+the longest time remix:
+
+    https://soundcloud.com/colourthesky/01-for-the-longest-time-billy?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing
+
+    https://soundcloud.com/the-pitches-sas/sets/for-the-longest-time?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing
+
+    
+
+
+
+ -->
+
+
+
 
     <script>
         const
