added more functionality to icon selection list on landing

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <div id="coreContainer">
 
         <div class="site-header">
-            <h1 class="font-header-1">oLabs</h1>
+            <h1 class="abnes-font">oLabs</h1>
         </div>
 
         <div class="page">
-            <div class="page-header">
+            <div class="page-header" style="display: none;">
                 <div class="page-title">
-                    <h1>oLabs Dashboard</h1>
+                    <h1>oLabs Projects</h1>
                 </div>
             </div>
 
@@ -41,19 +41,25 @@
         
                     <div class="page-section-body">
                         <div class="site-link">
-                            <img src="./public/media/image/rectangular/system/icons/link.png" alt="">
-                            <a href="./spreadshield.html">
+                            <img src="./public/media/image/rectangular/system/icons/link.png" alt="Link Icon">
+                            <a target="_blank" href="https://olabsinc.github.io/SpreadShield">
                                 <span>SpreadShield</span>
                             </a>
                         </div>
                         <div class="site-link">
-                            <img src="./public/media/image/rectangular/system/icons/link.png" alt="">
+                            <img src="./public/media/image/rectangular/system/icons/link.png" alt="Link Icon">
                             <a href="./widespread-guide.html">
                                 <span>WideSpread</span>
                             </a>
                         </div>
                         <div class="site-link">
-                            <img src="./public/media/image/rectangular/system/icons/link.png" alt="">
+                            <img src="./public/media/image/rectangular/system/icons/link.png" alt="Link Icon">
+                            <a href="https://olabsinc.github.io/olson-estates">
+                                <span>Olson Estates</span>
+                            </a>
+                        </div>
+                        <div class="site-link">
+                            <img src="./public/media/image/rectangular/system/icons/link.png" alt="Link Icon">
                             <a href="./myspread.html">
                                 <span>Game Testing</span>
                             </a>
