--- a/cora-test.html
+++ b/cora-test.html
@@ -143,7 +143,7 @@
                    colorManagement: true;
                    sortObjects: true;
                    physicallyCorrectLights: false;"
-                light="defaultLightsEnabled: false" loading-screen="dotsColor: aqua; backgroundColor: black">
+                light="defaultLightsEnabled: false" loading-screen="dotsColor: rgba(7, 212, 255, 1); backgroundColor: black">
                 <a-assets>
 
 
