--- a/demo-ranch.html
+++ b/demo-ranch.html
@@ -44,7 +44,7 @@
                     <!-- <a-gltf-model src="#deagle" position="0 0.5 0" scale="0.001 0.001 0.001" rotation="0 180 0"></a-gltf-model> -->
 
                 </a-entity>
-                <!-- <a-box look-at="[camera]" position="0 0.25 -3" color="aqua" scale="2 1 1" material="opacity: 0.175;"></a-box> -->
+                <!-- <a-box look-at="[camera]" position="0 0.25 -3" color="rgba(7, 212, 255, 1)" scale="2 1 1" material="opacity: 0.175;"></a-box> -->
             </a-entity>
         </a-entity>
 
