--- a/eddy-o.html
+++ b/eddy-o.html
@@ -146,7 +146,7 @@
                    colorManagement: true;
                    sortObjects: true;
                    physicallyCorrectLights: false;"
-                light="defaultLightsEnabled: false" loading-screen="dotsColor: aqua; backgroundColor: black">
+                light="defaultLightsEnabled: false" loading-screen="dotsColor: rgba(7, 212, 255, 1); backgroundColor: black">
                 <a-assets>
                     <a-asset-item id="mySpreadDashboard"
                         src="./public/media/3d-model/widespread_myspread_vr_dashboard.glb"></a-asset-item>
