--- a/myspread.html
+++ b/myspread.html
@@ -140,7 +140,7 @@
  -->
 
 
-    <a-scene fog="type: exponential; color: #171717; density: 0.075; far: 500" xr-mode-ui="enabled: false" light="defaultLightsEnabled: false" loading-screen="dotsColor: aqua; backgroundColor: black">
+    <a-scene fog="type: exponential; color: #171717; density: 0.075; far: 500" xr-mode-ui="enabled: false" light="defaultLightsEnabled: false" loading-screen="dotsColor: rgba(7, 212, 255, 1); backgroundColor: black">
         <a-assets>
             <a-asset-item id="mySpreadDashboard" src="./public/media/3d-model/widespread_myspread_vr_dashboard.glb"></a-asset-item>
             <a-asset-item id="deagle" src="./public/media/3d-model/demo-ranch/guns/desert-eagle.glb"></a-asset-item>
