--- a/olabs-office.html
+++ b/olabs-office.html
@@ -24,7 +24,7 @@
 <body>
         <div id="vrScene">
             <a-scene avatar-recorder fog="type: exponential; color: #222; density: 0.001" vr-mode="enabled: true;"
-                loading-screen="dotsColor: aqua; backgroundColor: black" reflection="directionalLight:a-light#dirlight;">
+                loading-screen="dotsColor: rgba(7, 212, 255, 1); backgroundColor: black" reflection="directionalLight:a-light#dirlight;">
                 <a-assets>
                     <a-asset-item id="portal" src="./public/media/3d-model/scifi_terminal.glb"></a-asset-item>
                     <a-asset-item id="building9" src="./public/media/3d-model/assets/buildings/sci-fi_building_9.glb"></a-asset-item>
