--- a/vr-main-menu.html
+++ b/vr-main-menu.html
@@ -63,7 +63,7 @@
                 <a-animation begin="fusing" easing="ease-in" attribute="scale" fill="backwards" from="1 1 1"
                     to="0.2 0.2 0.2" dur="1500"></a-animation>
             </a-entity>
-            <a-box look-at="[camera]" position="0 0.25 -3" color="aqua" scale="2 1 1" material="opacity: 0.15;"></a-box>
+            <a-box look-at="[camera]" position="0 0.25 -3" color="rgba(7, 212, 255, 1)" scale="2 1 1" material="opacity: 0.15;"></a-box>
         </a-entity>
     </a-entity>
 
@@ -152,7 +152,7 @@
     <a-light type="spot" color="#fff" position="0 0.25 0"
         light="type: point; color: #fff; groundColor: #39848e; distance: 0.25; intensity: 1; penumbra: 0.2; castShadow: true"></a-light>
     <!-- <a-ring color="teal" radius-inner="0.3" radius-outer="0.5" color="lime"></a-ring> -->
-    <a-torus color="aqua" arc="360" radius="0.2" radius-tubular="0.1" rotation="90 0 0" material="color: #000000"
+    <a-torus color="rgba(7, 212, 255, 1)" arc="360" radius="0.2" radius-tubular="0.1" rotation="90 0 0" material="color: #000000"
         geometry="arc: 360; radius: 1.64; radiusTubular: 0.02; segmentsRadial: 37; segmentsTubular: 33"
         scale="0.15 0.15 1" visible="" position="0.00003 0 -0.00168"></a-torus>
     <a-gltf-model src="#vrSpreadMenu" position="0 0 0" scale="0.6 0.6 0.6"></a-gltf-model>
