--- a/audi.html
+++ b/audi.html
@@ -143,7 +143,7 @@
 
 
 
-    <a-scene fog="type: exponential; color: #171717; density: 0; far: 500" xr-mode-ui="enabled: false" light="defaultLightsEnabled: false" loading-screen="dotsColor: aqua; backgroundColor: black">
+    <a-scene fog="type: exponential; color: #171717; density: 0; far: 500" xr-mode-ui="enabled: false" light="defaultLightsEnabled: false" loading-screen="dotsColor: rgba(7, 212, 255, 1); backgroundColor: black">
         <a-assets>
             <a-asset-item id="audiA8" src="./public/media/3d-model/audi_a8_1a1a1a.glb"></a-asset-item>
             <a-asset-item id="lambo2" src="./public/media/3d-model/assets/vehicle/terrain/passenger/convertible/lambo_2b.glb"></a-asset-item>
