--- a/share.html
+++ b/share.html
@@ -144,7 +144,7 @@
                    colorManagement: true;
                    sortObjects: true;
                    physicallyCorrectLights: false;"
-                light="defaultLightsEnabled: false" loading-screen="dotsColor: aqua; backgroundColor: black">
+                light="defaultLightsEnabled: false" loading-screen="dotsColor: rgba(7, 212, 255, 1); backgroundColor: black">
                 <a-assets>
                     <a-asset-item id="constructionSite1" src="./public/media/3d-model/construction-site_1a.glb"></a-asset-item>
                     <a-asset-item id="wildWest1" src="./public/media/3d-model/1800-wild-west_1.glb"></a-asset-item>
