--- a/vr3dL.html
+++ b/vr3dL.html
@@ -26,7 +26,7 @@
     
         <div id="vrSceneLeft">
             <a-scene id="aScene" avatar-recorder fog="type: exponential; color: #222; density: 0.001" vr-mode="enabled: true;"
-                loading-screen="dotsColor: aqua; backgroundColor: black" reflection="directionalLight:a-light#dirlight;">
+                loading-screen="dotsColor: rgba(7, 212, 255, 1); backgroundColor: black" reflection="directionalLight:a-light#dirlight;">
                 <a-assets>
                     <img id="livingroom" src="./public/media/image/360/dwelling/apartment/1/1.jpg" alt="">
                     <img id="diningroom" src="./public/media/image/360/dwelling/apartment/1/2.jpg" alt="">
