--- a/vr3dR.html
+++ b/vr3dR.html
@@ -19,7 +19,7 @@
 <body>
         <div id="vrSceneRight">
             <a-scene avatar-recorder fog="type: exponential; color: #222; density: 0.001" vr-mode="enabled: true;"
-                loading-screen="dotsColor: aqua; backgroundColor: black" reflection="directionalLight:a-light#dirlight;">
+                loading-screen="dotsColor: rgba(7, 212, 255, 1); backgroundColor: black" reflection="directionalLight:a-light#dirlight;">
                 <a-assets>
                     <img id="livingroom" src="./public/media/image/360/dwelling/apartment/1/1.jpg" alt="">
                     <img id="diningroom" src="./public/media/image/360/dwelling/apartment/1/2.jpg" alt="">
