--- a/widespread-guide.html
+++ b/widespread-guide.html
@@ -23,7 +23,7 @@
             align-items: center;
             justify-content: space-evenly;
             gap: 1rem;
-            border: solid 3px aqua;
+            border: solid 3px rgba(7, 212, 255, 1);
             box-shadow: inset 0 0 12px #ffffff8e;
             border-radius: 1rem;
             width: 90%;
@@ -31,17 +31,17 @@
             padding: 1rem;
         }
         .spread-icon-list svg {
-            border: solid 1px aqua;
+            border: solid 1px rgba(7, 212, 255, 1);
             padding: 0.15rem;
             scale: 1.25;
             border-radius: 0.25rem;
-            filter: drop-shadow(0 0 1px aqua);
+            filter: drop-shadow(0 0 1px rgba(7, 212, 255, 1));
             /* stroke: #000; */
             stroke: #fff;
             backdrop-filter: blur(6px);
         }
         .spread-icon-list svg:hover {
-            stroke: aqua;
+            stroke: rgba(7, 212, 255, 1);
             background-color: #00000065;
         }
     </style>
