fixed ol > li style

--- a/index.html
+++ b/index.html
@@ -100,18 +100,18 @@
                     </span>
                 </a>
             </li>
-            <li class="menu-item">
-                <a href="#menu" data-menu="Network Folder">
-                    <span class="menu-item-icon">
-                        <img src="./public/media/image/rectangular/system/icons/network-folder.png"
-                            alt="Network Folder Icon">
-                    </span>
-                </a>
-            </li>
+
             <li class="menu-item">
                 <a href="./database.html" data-menu="Database">
                     <span class="menu-item-icon">
                         <img src="./public/media/image/rectangular/system/icons/database.png" alt="Database Icon">
+                    </span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="./table-of-contents.html" data-menu="Table of Contents">
+                    <span class="menu-item-icon">
+                        <img src="./public/media/image/rectangular/system/icons/projects.png" alt="Tables Icon">
                     </span>
                 </a>
             </li>
