--- a/projects.html
+++ b/projects.html
@@ -123,7 +123,7 @@
                 </span>
             </a>
             <li class="menu-item">
-                <a href="./projects" data-menu="Projects">
+                <a href="./projects.html" data-menu="Projects">
                     <span class="menu-item-icon">
                         <img src="./public/media/image/rectangular/system/icons/projects-2.png" alt="Projects Icon">
                     </span>
@@ -147,9 +147,9 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="./database.html" data-menu="Database">
+                <a href="./table-of-contents.html" data-menu="Table of Contents">
                     <span class="menu-item-icon">
-                        <img src="./public/media/image/rectangular/system/icons/database.png" alt="Database Icon">
+                        <img src="./public/media/image/rectangular/system/icons/projects.png" alt="Tables Icon">
                     </span>
                 </a>
             </li>
