--- a/table-of-contents.html
+++ b/table-of-contents.html
@@ -15,6 +15,12 @@
 
 </head>
 <body>
+
+    <div id="fullscreenToggle">
+        <img id="fullscreenBtn" src="./public/media/image/system/view-expand.png" alt="Fullscreen Icon">
+        <img id="exitFullscreenBtn" class="hidden" src="./public/media/image/system/view-collapse.png" alt="Exit Fullscreen Icon">
+    </div>
+
     <div id="coreContainerBackground">
         <img src="./public/media/image/rectangular/system/logo/olabs_1a1a1a.png" alt="oLabs Logo">
     </div>
@@ -273,17 +279,18 @@
                     <img src="./public/media/image/rectangular/system/icons/close.png" alt="Close Menu Icon">
                 </span>
             </a>
-            <li class="menu-item">
-                <a href="./testing.html" data-menu="Testing">
-                    <span class="menu-item-icon">
-                        <img src="./public/media/image/rectangular/system/icons/testing.png" alt="Testing Icon">
-                    </span>
-                </a>
-            </li>
+
             <li class="menu-item">
                 <a href="./projects.html" data-menu="Projects">
                     <span class="menu-item-icon">
                         <img src="./public/media/image/rectangular/system/icons/projects-2.png" alt="Projects Icon">
+                    </span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="./index.html" data-menu="Home">
+                    <span class="menu-item-icon">
+                        <img src="./public/media/image/rectangular/system/icons/server-root.png" alt="Home Icon">
                     </span>
                 </a>
             </li>
@@ -309,5 +316,28 @@
     <div id="pageMenu">
     </div>
 
+
+
+
+
+<script>
+    const
+        fullscreenToggle = document.getElementById('fullscreenToggle'),
+        fullscreenBtn = document.getElementById('fullscreenBtn'),
+        exitFullscreenBtn = document.getElementById('exitFullscreenBtn')
+
+    fullscreenBtn.addEventListener('click', e => {
+        document.documentElement.requestFullscreen().catch((e) => {
+            console.log(e)
+        })
+        fullscreenBtn.classList.toggle('hidden')
+        exitFullscreenBtn.classList.toggle('hidden')
+    })
+    exitFullscreenBtn.addEventListener('click', e => {
+        document.exitFullscreen()
+        fullscreenBtn.classList.toggle('hidden')
+        exitFullscreenBtn.classList.toggle('hidden')
+    })
+</script>
 </body>
 </html>
