--- a/testing.html
+++ b/testing.html
@@ -123,7 +123,7 @@
                 </span>
             </a>
             <li class="menu-item">
-                <a href="./projects" data-menu="Projects">
+                <a href="./projects.html" data-menu="Projects">
                     <span class="menu-item-icon">
                         <img src="./public/media/image/rectangular/system/icons/projects-2.png" alt="Projects Icon">
                     </span>
@@ -139,17 +139,18 @@
                 </a>
             </li>
 
-            <li class="menu-item">
-                <a href="./testing.html" data-menu="Testing">
-                    <span class="menu-item-icon">
-                        <img src="./public/media/image/rectangular/system/icons/testing.png" alt="Testing Icon">
-                    </span>
-                </a>
-            </li>
+
             <li class="menu-item">
                 <a href="./database.html" data-menu="Database">
                     <span class="menu-item-icon">
                         <img src="./public/media/image/rectangular/system/icons/database.png" alt="Database Icon">
+                    </span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="./table-of-contents.html" data-menu="Table of Contents">
+                    <span class="menu-item-icon">
+                        <img src="./public/media/image/rectangular/system/icons/projects.png" alt="Tables Icon">
                     </span>
                 </a>
             </li>
